<resources>
    <string name="app_name">CityGuideDashboard</string>
    <string name="get_a_way">Get A Way</string>
    <string name="search">Search...</string>


    <!---Strings for dashboard-->

    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>


    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="mcdonalds_meal">The one and only Big Mac®, served with our World Famous Fries® and your choice of an icy soft drink</string>
    <string name="mcdonalds">McDonald\'s</string>


</resources>